[package]
name = "harold"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = "0.31.1"
log = "0.4.22"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.69"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
